--- a/index.html
+++ b/index.html
@@ -361,14 +361,14 @@
         <div class="item-title">Выезд на приготовление блюд</div>
         <div class="item-price">Договорная цена</div>
       </div>
-      <img src="pics/kulinarnyy-master-klass.png" alt="Выезд повара для приготовления блюд" loading="lazy" onclick="openModal(this.src)">
+      <img src="pics/Кулинарный мастер-класс от шеф-повара нашего ресторана Фрида! http___rivieramaya_grandvelas.com_russian_.png" alt="Выезд повара для приготовления блюд" loading="lazy" onclick="openModal(this.src)">
     </div>
     <div class="item" style="--item-index: 2;">
       <div class="item-info">
         <div class="item-title">Приготовление мясной продукции для мероприятия</div>
         <div class="item-price">Договорная цена</div>
       </div>
-      <img src="pics/assorted-meat-products.jpg" alt="Приготовление мясной продукции" loading="lazy" onclick="openModal(this.src)">
+      <img src="pics/Assorted meat products including ham and sausages _ Premium Photo.jpg" alt="Приготовление мясной продукции" loading="lazy" onclick="openModal(this.src)">
     </div>
   </section>
 
