--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
     <div class="item" style="--item-index: 2;">
       <div class="item-info">
         <div class="item-title">Котлета с хлопьями</div>
-        <div class="item-price">190 ₸</div>
+        <div class="item-price">230 ₸</div>
       </div>
       <img src="pics/kotleta-gov.jpg" alt="Котлета с хлопьями" loading="lazy" onclick="openModal(this.src)">
     </div>
@@ -290,14 +290,14 @@
         <div class="item-title">Рулет куриный</div>
         <div class="item-price">2800 ₸</div>
       </div>
-      <img src="pics/Рулет из куриной грудки с грибами и сыром.jpg" alt="Рулет куриный с грибами и сыром" loading="lazy" onclick="openModal(this.src)">
+      <img src="pics/Рулет из куриной грудки с сыром.jpg" alt="Рулет куриный с грибами и сыром" loading="lazy" onclick="openModal(this.src)">
     </div>
     <div class="item" style="--item-index: 2;">
       <div class="item-info">
         <div class="item-title">Рулет микс</div>
         <div class="item-price">3000 ₸</div>
       </div>
-      <img src="pics/rulet-grib.jpg" alt="Рулет микс с грибами" loading="lazy" onclick="openModal(this.src)">
+      <img src="pics/rulet-grib.jpg" alt="Рулет микс с разным видом мяса" loading="lazy" onclick="openModal(this.src)">
     </div>
   </section>
 
@@ -314,7 +314,7 @@
     <div class="item" style="--item-index: 2;">
       <div class="item-info">
         <div class="item-title">Долма</div>
-        <div class="item-price">330 ₸</div>
+        <div class="item-price">200 ₸</div>
       </div>
       <img src="pics/p_O.png" alt="Долма" loading="lazy" onclick="openModal(this.src)">
     </div>
@@ -326,14 +326,14 @@
     <div class="item" style="--item-index: 1;">
       <div class="item-info">
         <div class="item-title">Куриный ассорти</div>
-        <div class="item-price">3400 ₸</div>
+        <div class="item-price">3500-4000 ₸</div>
       </div>
       <img src="pics/WhatsApp Image 2025-11-26 at 14.35.17.jpeg" alt="Куриный ассорти" loading="lazy" onclick="openModal(this.src)">
     </div>
     <div class="item" style="--item-index: 2;">
       <div class="item-info">
         <div class="item-title">Мясной ассорти</div>
-        <div class="item-price">4200 ₸</div>
+        <div class="item-price">9000 ₸</div>
       </div>
       <img src="pics/WhatsApp Image 2025-11-26 at 14.35.14.jpeg" alt="Мясной ассорти" loading="lazy" onclick="openModal(this.src)">
     </div>
